tests: Enabling Mockito agent